# rules_watchman

./: .bazelrc  .commitlintrc.mjs  .gitignore  BUILD.bazel  CHANGELOG.md  MODULE.bazel  NOTICE  README.md  lefthook.yml  package-lock.json  package.json  release-please-config.json
.github/workflows/: bazel-opt.yml  bazel.yml  release-please.yml  verify-hooks.yml
bazel/: BUILD.bazel  dist.bzl
bazel/patches/: BUILD.bazel  double-conversion-bazel-9.patch  edencommon-mingw.patch  folly-libcxx.patch  folly-mingw-headers.patch  folly-mingw.patch  folly-no-libunwind-on-linux-arm64.patch  gflags-windows-platform.patch  glog-mingw.patch  libdwarf-bazel-9.patch  libevent-mingw.patch  libunwind-bazel-9.patch  range-v3-bazel-9.patch  watchman-bazel.patch
tests/: BUILD.bazel  watchman_smoke_test.ps1  watchman_smoke_test.sh
