module(
    name = "rules_watchman",
    version = "0.1.0",
)

bazel_dep(name = "llvm", version = "0.8.11")
bazel_dep(name = "boost.filesystem", version = "1.89.0.bcr.1")
bazel_dep(name = "boost.regex", version = "1.89.0.bcr.1")
bazel_dep(name = "boost.utility", version = "1.89.0.bcr.1")
bazel_dep(name = "folly", version = "2026.05.18.00")
bazel_dep(name = "fmt", version = "12.1.0")
bazel_dep(name = "gflags", version = "2.2.2.bcr.1")
bazel_dep(name = "glog", version = "0.7.1.bcr.1")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "openssl", version = "3.5.5.bcr.4")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_cc", version = "0.2.20")
bazel_dep(name = "with_cfg.bzl", version = "0.12.0")

http_archive = use_repo_rule(
    "@bazel_tools//tools/build_defs/repo:http.bzl",
    "http_archive",
)

http_archive(
    name = "fb303",
    build_file = "//bazel/third_party:fb303.BUILD.bazel",
    sha256 = "9365aaf1b9046ac3f1ec24e52eedc78704fe9a10687fd758f80a19e1e7e71a21",
    strip_prefix = "fb303-e8b0021954f2328b9b954687b2a94dbae100fd17",
    urls = ["https://github.com/facebook/fb303/archive/e8b0021954f2328b9b954687b2a94dbae100fd17.tar.gz"],
)

http_archive(
    name = "edencommon",
    build_file = "//bazel/third_party:edencommon.BUILD.bazel",
    sha256 = "e94ce3819f4e015d732b2cb6a67e44b5f3ffc7de5518265dceb9b73bbcf5a16a",
    strip_prefix = "edencommon-9bbfab31b921d0044ef1eaed36e2b660d75f7bc4",
    urls = ["https://github.com/facebookexperimental/edencommon/archive/9bbfab31b921d0044ef1eaed36e2b660d75f7bc4.tar.gz"],
)

http_archive(
    name = "watchman",
    build_file = "//bazel/third_party:watchman.BUILD.bazel",
    patch_args = ["-p1"],
    patches = ["//bazel/patches:watchman-bazel.patch"],
    sha256 = "e46ef6b98e0ea4201ef603e628eac78165573a8cc4bac12c74cdab813c45f9f7",
    strip_prefix = "watchman-2026.07.06.00",
    urls = ["https://github.com/facebook/watchman/archive/refs/tags/v2026.07.06.00.tar.gz"],
)

osx = use_extension("@llvm//extensions:osx.bzl", "osx")
osx.frameworks(
    names = [
        "CFNetwork",
        "CoreFoundation",
        "CoreServices",
        "DiskArbitration",
        "Foundation",
        "IOKit",
        "Kernel",
        "OSLog",
        "Security",
        "SystemConfiguration",
    ],
)

single_version_override(
    module_name = "folly",
    patch_strip = 1,
    patches = [
        "//bazel/patches:folly-libcxx.patch",
        "//bazel/patches:folly-no-libunwind-on-linux-arm64.patch",
    ],
)

single_version_override(
    module_name = "libdwarf",
    patch_strip = 1,
    patches = ["//bazel/patches:libdwarf-bazel-9.patch"],
)

single_version_override(
    module_name = "libunwind",
    patch_strip = 1,
    patches = ["//bazel/patches:libunwind-bazel-9.patch"],
)

single_version_override(
    module_name = "range-v3",
    patch_strip = 1,
    patches = ["//bazel/patches:range-v3-bazel-9.patch"],
)

toolchain = use_extension("@llvm//extensions:toolchain.bzl", "toolchain")
toolchain.exec(
    arch = "aarch64",
    os = "macos",
)
toolchain.exec(
    arch = "x86_64",
    os = "linux",
)
toolchain.exec(
    arch = "aarch64",
    os = "linux",
)
toolchain.target(
    arch = "aarch64",
    os = "macos",
)
toolchain.target(
    arch = "x86_64",
    os = "linux",
)
toolchain.target(
    arch = "aarch64",
    os = "linux",
)
use_repo(toolchain, "llvm_toolchains")

register_toolchains("@llvm_toolchains//:all")

single_version_override(
    module_name = "double-conversion",
    patch_strip = 1,
    patches = ["//bazel/patches:double-conversion-bazel-9.patch"],
)
