exports_files([
    "double-conversion-bazel-9.patch",
    "edencommon-mingw.patch",
    "folly-libcxx.patch",
    "folly-mingw-headers.patch",
    "folly-mingw.patch",
    "folly-no-libunwind-on-linux-arm64.patch",
    "gflags-windows-platform.patch",
    "glog-mingw.patch",
    "libdwarf-bazel-9.patch",
    "libevent-mingw.patch",
    "libunwind-bazel-9.patch",
    "range-v3-bazel-9.patch",
    "watchman-bazel.patch",
])
